[gd_scene load_steps=5 format=2]

[ext_resource path="res://boards/test/board.gd" type="Script" id=1]
[ext_resource path="res://boards/player_board/player_board.tscn" type="PackedScene" id=2]
[ext_resource path="res://boards/controller/controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://boards/node/node.tscn" type="PackedScene" id=4]

[node name="Board" type="Spatial"]

script = ExtResource( 1 )

[node name="Player1" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -0.75 )

[node name="Player2" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.25, 0 )
_sections_unfolded = [ "Transform", "collision" ]

[node name="Player3" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.75 )
_sections_unfolded = [ "Transform" ]

[node name="Player4" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.25, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Controller" parent="." index="4" instance=ExtResource( 3 )]

start_node = NodePath("../Node1")

[node name="Node1" parent="." index="5" instance=ExtResource( 4 )]

next_nodes = [  ]
prev_nodes = [  ]

[node name="Node2" parent="." index="6" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
type = 1
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node1") ]

[node name="Node3" parent="." index="7" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3 )
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node2") ]

[node name="Node4" parent="." index="8" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 3 )
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node3") ]

[node name="Node5" parent="." index="9" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.09936, 0, 0 )
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node4") ]

[node name="Node6" parent="." index="10" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.0758, 0.0101128, -0.0186749 )
type = 2
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node5") ]

[node name="Node7" parent="." index="11" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0994, 0, 0 )
potential_cake = true
next_nodes = [  ]
prev_nodes = [ NodePath("../Node6") ]

[node name="Node8" parent="." index="12" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.0994, 0, 0 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node7") ]

[node name="Node9" parent="." index="13" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0994, 0, -2 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node8") ]

[node name="Node10" parent="." index="14" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.0994, 0, -4 )
type = 1
next_nodes = [  ]
prev_nodes = [ NodePath("../Node9") ]

[node name="Node11" parent="." index="15" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0994, 0, -1 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node10") ]

[node name="Node12" parent="." index="16" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0994, 0, 2 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node11") ]

[node name="Node13" parent="." index="17" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0994, 0, 5 )
_sections_unfolded = [ "Transform" ]
next_nodes = [  ]
prev_nodes = [ NodePath("../Node12") ]

[node name="Node14" parent="." index="18" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.0994, 0, 8 )
_sections_unfolded = [ "Transform" ]
next_nodes = [  ]
prev_nodes = [ NodePath("../Node13") ]

[node name="Node15" parent="." index="19" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0994, 0, 8 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node14") ]

[node name="Node16" parent="." index="20" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.0994, 0, 8 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node15") ]

[node name="Node17" parent="." index="21" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0994, 0, 10 )
type = 1
next_nodes = [  ]
prev_nodes = [ NodePath("../Node16") ]

[node name="Node18" parent="." index="22" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.0994, 0, 10 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node17") ]

[node name="Node19" parent="." index="23" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0994, 0, 10 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node18") ]

[node name="Node20" parent="." index="24" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0994, 0, 10 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node19") ]

[node name="Node21" parent="." index="25" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9006, 0, 10 )
type = 1
next_nodes = [  ]
prev_nodes = [ NodePath("../Node20") ]

[node name="Node22" parent="." index="26" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9006, 0, 7 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node21") ]

[node name="Node23" parent="." index="27" instance=ExtResource( 4 )]

transform = Transform( 0.999882, -0.0153777, 0, 0.0153777, 0.999882, 0, 0, 0, 1, -3.9006, 0, 3 )
type = 1
next_nodes = [  ]
prev_nodes = [ NodePath("../Node22") ]

[node name="Node24" parent="." index="28" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9006, 0, -1 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node23") ]

[node name="Node25" parent="." index="29" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9006, 0, -3 )
next_nodes = [ NodePath("../Node1") ]
prev_nodes = [ NodePath("../Node24") ]

[node name="Node26" parent="." index="30" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.55706, 4.76837e-07, -11.3098 )
type = 2
next_nodes = [  ]
prev_nodes = [  ]

[node name="Node27" parent="." index="31" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0204, 0, -8.71061 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node26") ]

[node name="Node28" parent="." index="32" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.6044, 0, -11.1831 )
type = 2
next_nodes = [  ]
prev_nodes = [ NodePath("../Node27") ]

[node name="Node29" parent="." index="33" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5513, 0, -16.2844 )
next_nodes = [  ]
prev_nodes = [ NodePath("../Node28") ]

[node name="Node30" parent="." index="34" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.46152, 0, -15.2554 )
next_nodes = [ NodePath("../Node26") ]
prev_nodes = [ NodePath("../Node29") ]

[node name="Sun" type="DirectionalLight" parent="." index="35"]

transform = Transform( 0.642788, 0.627507, -0.439385, 0, 0.573576, 0.819152, 0.766044, -0.526541, 0.368688, -6, 4, 3 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0


